--- a/index.html
+++ b/index.html
@@ -160,6 +160,88 @@
       transform: translateY(0);
     }
 
+    .playback-speed-control {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      background: var(--bg-elev-1);
+      border: 1px solid var(--border);
+      border-radius: var(--radius-sm);
+      padding: 6px 12px;
+      margin-right: 10px;
+      transition: var(--transition);
+    }
+
+    .playback-speed-control:hover {
+      border-color: var(--accent-soft);
+      background: var(--bg-elev-2);
+    }
+
+    .playback-speed-control label {
+      font-size: 13px;
+      color: var(--text-dim);
+      font-weight: 500;
+      white-space: nowrap;
+    }
+
+    .playback-speed-control input[type="range"] {
+      width: 100px;
+      height: 4px;
+      -webkit-appearance: none;
+      appearance: none;
+      background: var(--bg-elev-3);
+      border-radius: 2px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .playback-speed-control input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: var(--accent);
+      cursor: pointer;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      transition: transform 0.15s ease;
+    }
+
+    .playback-speed-control input[type="range"]::-webkit-slider-thumb:hover {
+      transform: scale(1.15);
+      background: var(--accent-bright);
+    }
+
+    .playback-speed-control input[type="range"]::-moz-range-thumb {
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: var(--accent);
+      cursor: pointer;
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .playback-speed-control input[type="number"] {
+      background: var(--bg-elev-2);
+      color: var(--accent);
+      border: 1px solid var(--border-muted);
+      border-radius: var(--radius-sm);
+      padding: 4px 8px;
+      font-size: 13px;
+      font-weight: 600;
+      width: 60px;
+      text-align: center;
+      transition: var(--transition);
+    }
+
+    .playback-speed-control input[type="number"]:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 2px var(--focus-ring);
+      background: var(--bg-elev-3);
+    }
+
     .controls input[type="url"],
     .controls select {
       background: var(--bg-elev-1);
@@ -563,33 +645,6 @@
     }
 
     /* Multi-Track Styles */
-    #multi-track-section {
-      margin-top: 16px;
-    }
-
-    .multi-track-toggle {
-      margin-bottom: 12px;
-    }
-
-    #enable-multi-track-btn {
-      background: linear-gradient(135deg, var(--secondary), hsl(233 73% 85%));
-      color: #0a0c14;
-      border: 1px solid var(--border);
-      padding: 8px 16px;
-      border-radius: var(--radius-sm);
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 12px;
-      letter-spacing: .4px;
-      box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .6);
-      transition: var(--transition);
-    }
-
-    #enable-multi-track-btn:hover {
-      filter: brightness(1.08);
-      transform: translateY(-1px);
-    }
-
     #enable-multi-track-btn.active {
       background: linear-gradient(135deg, var(--danger), hsl(9 26% 70%));
       color: #1c0a0a;
@@ -696,6 +751,100 @@
       transform: translateY(-1px);
     }
 
+    .skeleton-toggle-btn {
+      background: var(--bg-elev-2);
+      color: var(--text-color);
+      border: 1px solid var(--border);
+      padding: 6px 12px;
+      border-radius: var(--radius-sm);
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 11px;
+      letter-spacing: .3px;
+      transition: var(--transition);
+    }
+
+    .skeleton-toggle-btn:hover {
+      background: var(--bg-elev-3);
+      border-color: var(--accent);
+    }
+
+    .skeleton-toggle-btn.active {
+      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
+      color: #1c1405;
+      border-color: var(--accent);
+    }
+
+    .speed-control {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      padding: 0 8px;
+      border-left: 1px solid var(--border-muted);
+      border-right: 1px solid var(--border-muted);
+    }
+
+    .speed-control label {
+      font-size: 11px;
+      color: var(--text-dim);
+      font-weight: 500;
+    }
+
+    .speed-slider {
+      width: 80px;
+      height: 4px;
+      -webkit-appearance: none;
+      appearance: none;
+      background: var(--bg-elev-3);
+      border-radius: 2px;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .speed-slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: var(--accent);
+      cursor: pointer;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      transition: transform 0.15s ease;
+    }
+
+    .speed-slider::-webkit-slider-thumb:hover {
+      transform: scale(1.15);
+    }
+
+    .speed-slider::-moz-range-thumb {
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background: var(--accent);
+      cursor: pointer;
+      border: none;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    .speed-value {
+      font-size: 11px;
+      color: var(--accent);
+      font-weight: 600;
+      min-width: 32px;
+      text-align: center;
+    }
+
+    .next-frame-btn:not(:disabled) {
+      background: var(--bg-elev-2);
+      border-color: var(--border);
+    }
+
+    .next-frame-btn:hover:not(:disabled) {
+      background: var(--bg-elev-3);
+      border-color: var(--accent);
+    }
+
     .tracks-list {
       display: flex;
       flex-direction: column;
@@ -721,6 +870,28 @@
       margin-bottom: 8px;
       padding-bottom: 8px;
       border-bottom: 1px solid var(--border-muted);
+    }
+
+    .track-progress-container {
+      margin-bottom: 8px;
+    }
+
+    .track-progress-bar {
+      width: 100%;
+      height: 4px;
+      background: var(--bg-elev-3);
+      border-radius: 2px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .track-progress-fill {
+      height: 100%;
+      background: linear-gradient(90deg, var(--accent-soft), var(--accent));
+      border-radius: 2px;
+      width: 0%;
+      transition: width 0.1s linear;
+      box-shadow: 0 0 8px rgba(255, 204, 0, 0.3);
     }
 
     .track-name {
@@ -836,6 +1007,16 @@
 
     .slot.occupied:active {
       cursor: grabbing;
+    }
+
+    .slot.single-slot {
+      width: 100%;
+      max-width: none;
+      cursor: default;
+    }
+
+    .slot.single-slot.occupied {
+      cursor: default;
     }
 
     .slot.dragging {
@@ -1159,8 +1340,14 @@
           <button type="button" onclick="document.getElementById('spine-file-input').click()">選擇檔案</button>
           <button id="toggle-skeleton-btn" onclick="toggleSkeletonDebug('spineViewer')">顯示骨架</button>
           <button id="change-bg-btn" onclick="openBgColorPicker('spineViewer')">背景顏色</button>
-          播放速度: <input type="number" id="playback-speed" min="0" max="10" step="0.01" value="1"
-            oninput="changePlaybackSpeed('spineViewer', this.value)"> </input>
+          <button id="enable-multi-track-btn" onclick="toggleMultiTrack()" style="display: none;">多軌模式</button>
+          <div class="playback-speed-control" title="播放速度會在每次更換動畫時重製為 1x">
+            <label for="playback-speed">播放速度:</label>
+            <input type="range" id="playback-speed-slider" min="0" max="10" step="0.1" value="1"
+              oninput="handlePlaybackSpeedChange('spineViewer', this.value)">
+            <input type="number" id="playback-speed" min="0" max="10" step="0.01" value="1"
+              oninput="handlePlaybackSpeedChange('spineViewer', this.value)">
+          </div>
           <a id="upload-status">_(:3 」∠ )_</a>
           <div style="display:none;">
             <input type="url" id="spine-url" placeholder="留空白就好" />
@@ -1172,6 +1359,7 @@
         <div id='skin-list'></div>
         <div id="animation-list"></div>
         <div id="animation-sequence-section"></div>
+        <div id="multi-track-container"></div>
       </div>
     </div>
   </div>
@@ -1277,6 +1465,24 @@
       const numericSpeed = parseFloat(speed);
       if (!isNaN(numericSpeed) && numericSpeed >= 0) {
         viewer.setPlaybackSpeed(numericSpeed);
+        console.log(`[Playback Speed] Set to ${numericSpeed}x`);
+      }
+    }
+
+    function handlePlaybackSpeedChange(viewerId, speed) {
+      const viewer = document.getElementById(viewerId);
+      const slider = document.getElementById('playback-speed-slider');
+      const numberInput = document.getElementById('playback-speed');
+
+      const numericSpeed = parseFloat(speed);
+      if (!isNaN(numericSpeed) && numericSpeed >= 0) {
+        // Update viewer
+        viewer.setPlaybackSpeed(numericSpeed);
+
+        // Sync all controls
+        slider.value = numericSpeed;
+        numberInput.value = numericSpeed;
+
         console.log(`[Playback Speed] Set to ${numericSpeed}x`);
       }
     }
@@ -2328,11 +2534,11 @@
       }
     }
 
-    // Show multi-track section after animations are loaded
+    // Show multi-track button after animations are loaded
     function showMultiTrackOption() {
-      const multiTrackSection = document.getElementById('multi-track-section');
-      if (multiTrackSection) {
-        multiTrackSection.style.display = 'block';
+      const multiTrackBtn = document.getElementById('enable-multi-track-btn');
+      if (multiTrackBtn) {
+        multiTrackBtn.style.display = '';
       }
     }
   </script>
