--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,7 @@
           <button type="button" onclick="document.getElementById('spine-file-input').click()">選擇檔案</button>
           <button id="toggle-skeleton-btn" onclick="toggleSkeletonDebug('spineViewer')">顯示骨架</button>
           <button id="change-bg-btn" onclick="openBgColorPicker('spineViewer')">背景顏色</button>
-          <button id="enable-multi-track-btn" onclick="toggleMultiTrack()" style="display: none;">多軌模式</button>
+          <button id="enable-multi-track-btn" onclick="toggleMultiTrack()" style="display: none;">啟用多軌模式</button>
           <div class="playback-speed-control" title="播放速度會在每次更換動畫時重製為 1x">
             <label for="playback-speed">播放速度:</label>
             <input type="range" id="playback-speed-slider" min="0" max="10" step="0.1" value="1"
@@ -2517,6 +2517,11 @@
         }
       } else {
         // Disable multi-track mode
+        // Stop playback controller first
+        if (multiTrackUI && multiTrackUI.playbackController) {
+          multiTrackUI.playbackController.stop();
+        }
+
         viewer.disableMultiTrack();
         container.innerHTML = '';
         multiTrackUI = null;
